--- a/index.html
+++ b/index.html
@@ -1,6 +1,25 @@
 <html>
-    <head><title>strona</title></head>
+    <head><title>strona</title>
+    <style>
+        body{
+            background-color: pink;
+        }
+        div{
+            width: 300px;
+            height: 400px;
+            background-color: aqua;
+        }
+        p{
+            font-size: 16pt;
+            font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+            border: 1px solid black;
+        }
+    </style>
+    </head>
     <body>
         <p>strona</p>
+        <p>mam fajna strone</p>
+        <p>szczawnica jest super</p>
+        <div></div>
     </body>
 </html>
